# quickstructs

./: .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  flake.nix
examples/: spsc_queue_example.cc
include/quick/error/: Error.hh
include/quick/handle/: Any.cc  SharedPtr.hh  SharedPtr.hpp  UniquePtr.hh  UniquePtr.hpp
include/quick/io/: Cassandra.hh  Cassandra.hpp  Config.cc  Config.hh  JSONReader.cc  JSONReader.hh  MarketFeed.cc  MarketFeed.hh  SocketRAII.hh  SocketRAII.hpp  Tcp.hh  TcpClient.cc  TcpClient.hh  TcpServer.cc  TcpServer.hh
include/quick/memory/: Memcpy.cc  Memmove.cc  Strcpy.cc
include/quick/structs/: Orderbook.hh  Orderbook.hpp  SPSCQueue.hh  SPSCQueue.hpp  Structs.hpp  ThreadSafeQueue.hh  ThreadSafeQueue.hpp  Vector.hh  Vector.hpp
include/quick/thread/: SpinMutex.hpp  ThreadPool.hpp
include/quick/utils/: Logger.hh  LoggerImpl.hpp  SimpleLogger.hh  Timer.hh  Timer.hpp  TomlParser.cc  TomlParser.hh
tests/: Memory_test.cc  Orderbook_test.cc  ThreadPool_test.cc  Vector_test.cc  spscqueue_test.cc  test_utils.hh
